# UniversalisAPI

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  34156.json  README.md  conftest.py  items.json  pyproject.toml  sheets.json
docs/source/: conf.py  index.rst  modules.rst  universalisapi.api_objects.rst  universalisapi.rst  usage.rst
integration/: test_client_integration.py
src/universalisapi/: __init__.py  _wrapper.py  client.py  decos.py  exceptions.py  wrapper.py
src/universalisapi/api_objects/: enums.py  mb_data.py
src/universalisapi/utils/: enums.py  types.py
tests/: .coverage  conftest.py  current-item-price-data.json  data-centers.json  dc_names.json  get_test_data.py  least-recently-updated_100_crystal.json  least-recently-updated_20_coeurl.json  test_client.py  test_wrapper.py  world_names.json  worlds.json
tests/integration/: conftest.py  test_client_integration.py
tests/least_recent_data/: dcName_aether_112.json  dcName_aether_148.json  dcName_aether_179.json  dcName_aether_81.json  dcName_chaos_200.json  dcName_chaos_23.json  dcName_crystal_127.json  dcName_dynamis_124.json  dcName_dynamis_152.json  dcName_dynamis_183.json  dcName_dynamis_47.json  dcName_elemental_12.json  dcName_elemental_38.json  dcName_elemental_60.json  dcName_elemental_99.json  dcName_gaia_22.json  dcName_light_13.json  dcName_light_18.json  dcName_meteor_15.json  dcName_primal_141.json  dcName_primal_149.json  dcName_primal_50.json  dcName_primal_70.json  dcName_莫古力_122.json  dcName_莫古力_178.json  dcName_莫古力_195.json  dcName_莫古力_197.json  dcName_豆豆柴_182.json  dcName_豆豆柴_62.json  dcName_豆豆柴_93.json  dcName_陆行鸟_36.json  dcName_한국_105.json  dcName_한국_34.json  dcName_한국_89.json  world_atomos_9.json  world_carbuncle_137.json  world_carbuncle_52.json  world_cerberus_46.json  world_chocobo_137.json  world_cuchulainn_9.json  (+18 more)
tests/mb_data_data/: dcName_crystal_42884,2.json  dcName_crystal_42884.json
tests/schemas/: agg_data.json  least_recent.json
tests/tests/: conftest.py  test_client.py  test_wrapper.py
tests/tests/test_api_objects/: test_mb_data.py
universalisapi/: client.py  wrapper.py
universalisapi/api_objects/: listing.py
