[project]
name = "universalisapi"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "async-property>=0.2.2",
    "python-json-logger>=3.2.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "tests",
    "integration"
]
markers = [
    "unittest: no API calls",
    "integration: calls Universalis API"
]
addopts = "--cov=universalisapi --cov-report html"

[dependency-groups]
dev = [
    "aioresponses>=0.7.7",
    "jsonschema>=4.23.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
