[project]
name = "universalisapi"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "async-property>=0.2.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "tests/tests",
    "tests/integration"
]
markers = [
    "unittest: no API calls",
    "integration: calls Universalis API"
]
addopts = "--cov=universalisapi --cov-report html"

[tool.ruff.lint]
select = ["D", "F", "E", "W", "N", "UP", "ANN"]
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
property-decorators = ["async_property.async_cached_property"]

[dependency-groups]
dev = [
    "aioresponses>=0.7.7",
    "intersphinx-registry>=0.2412.7",
    "jsonschema>=4.23.0",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
